styles and scripts compression was added, composer now is initialised in storage folder

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /php.ini
 
 #comporessed
-/catalog/comporessed/*
+/catalog/comporessed/
 # Image Cache Files
 /image/cache/*
 !/image/cache/index.html
