--- a/system/storage/composer.json
+++ b/system/storage/composer.json
@@ -15,6 +15,7 @@
       "php": ">=5.4 <8.0",
         "twig/twig": "^3.8",
         "matthiasmullie/minify": "^1.3",
-        "scssphp/scssphp": "^1.12"
+        "scssphp/scssphp": "^1.12",
+        "telegram-bot/api": "^2.5"
     }
 }
